<?xml version="1.0" encoding="utf-8"?>
<!--
GlowNotifier Application for Android
Copyright (C) 2013 Youngbin Han<sukso96100@gmail.com>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">GlowNotifier</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_preview">Save and Preview</string>
    <string name="action_new">Add New</string>
    <string name="service_and_info">Service Toggle and App info</string>
    <string name="accessibility">Notification Detection Service Settings</string>
    <string name="appinfo">About the App</string>
    <string name="app_settings">App Settings</string>
    <string name="color">Select Color</string>
    <string name="pos">Position of Glow :</string>

    <string-array name="posentry">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>

    <string name="update">Check for updates on Google Play</string>
    <string name="src">Get the Full Source Code on GitHub</string>
    <string name="tutorial">Tutorial</string>
    <string name="legal">Legal Notices</string>
    <string name="sysnotidetectservice">System Notification Detection Service</string>
    <string name="sysnotidetectservice_desc">GlowNotifier : System Notification Detection Service - Turn this Accessibility Service on to Enable Feature</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tutorial_0">Start</string>
    <string name="tutorial_0_0">Swipe form Right to continue</string>
    <string name="tutorial_1">Turning On</string>
    <string name="tutorial_1_0">Turn the Service On to Enable the Feature</string>
    <string name="tutorial_1_1">Turn the Service On</string>
    <string name="tutorial_2">Customization</string>
    <string name="tutorial_2_0">You can customize the color, position, more of the Glow</string>
    <string name="tutorial_3">Even Screen is Off</string>
    <string name="tutorial_3_0">Use Glow Screen feature to get notified even screen is off</string>
    <string name="tutorial_done">Done!</string>
    <string name="size">Size of Glow :</string>
    <string name="shape">Shape of Glow :</string>

    <string-array name="shapentry">
        <item>Circular Gradient(default)</item>
        <item>Linear Gradient</item>
    </string-array>

    <string name="visit">Visit GlowNotifier Website</string>
    <string name="blog">Visit Developer\'\ s Blog</string>
    <string name="glow_delay">Glow Delay Time(Milliseconds/5000(5sec):Default) :</string>
    <string name="sysnotilistenerservice">GlowNotifier : Notification Detector</string>
    <string name="title_activity_blacklist">Notification Blacklist</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blacklist__addnew">Add New</string>
    <string name="db_alreayexist">Already Exist On Blacklist</string>
    <string name="db_removed">Removed from Blacklist</string>
    <string name="blacklist_info">Glow will not appear for \n
        blacklisted apps\'\  notification. \n
        Longclick to remove item from blacklist.</string>
    <string name="title_activity_color_settings">Glow Color Settings</string>
    <string name="color_method">Color Picking Method :</string>

    <string-array name="color_method_entry">
        <item>Fixed Color</item>
        <item>Auto Color Picking</item>
        <item>Color Per App</item>
    </string-array>

    <string name="pick_color_fixed">Pick Fixed Color</string>
    <string name="translate">Help Translating This App</string>
    <string name="title_activity_glow">GlowActivity</string>
    <string name="title_activity_glow_screen_settings">Glow Screen Settings</string>
    <string name="glowscreen_toggle">Use Glow Screen</string>
    <string name="glowscreen_desc">If you turn this feature on,
        it will wake your device up from sleep and show you some information about the notification that just detected</string>
    <string name="glowscreen_clockkinds">Kinds of Clock for Glow Screen :</string>

    <string-array name="glowscreen_clockkinds_entry">
        <item>Digital Clock</item>
        <item>Analog Clock</item>
    </string-array>

    <string name="glowscreen_delay">Glow Screen Delay Time(Milliseconds)\n
    (0:Keep Screen On 30000(30sec):Default) :</string>
    <string name="glowscreen_close">Close Glow Screen Automatically When Turning Screen Off</string>
    <string name="deviceadmin_on">Device Administration is On.\n
    If you are not using the feature "GlowNotifier : Glow Screen - Turn Off Screen Automatically"
    or trying to uninstall this app, Turn Device Administration Off First</string>
    <string name="deviceadmin_off">Device Administration is Off</string>
    <string name="glowscreen_autoscreenoff">Turn the Screen Off Automatically</string>
    <string name="deviceadmin_label">GlowNotifier : Turn Screen Off Automatically</string>
    <string name="deviceadmin_desc">Turn this on to turn off screen automatically after Glow Screen appeared\n
    If you are not using the feature or trying to uninstall GlowNotifier,
    You must turn this off at [Settings-Security-Device administrators] first</string>
    <string name="title_activity_glow_activity_preview">GlowActivityPreview</string>
    <string name="title_activity_color_per_app_list">Colors Per App Settings</string>
    <string name="glow_blink">The number of iterations of Glow Blink(default : 1) :</string>
    <string name="devadmin_error">In order to Turn Screen off Automatically,\n
                                    You must turn on the Device Administrator\n
                                    Please Check it first.</string>
    </resources>
